[package]
name = "stripe-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.11.0"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
web-sys = "0.3.68"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tracing = "0.1.40"
dotenv = "0.15.0"
